[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yafowil.bootstrap"
version = "2.0.0a3.dev0"
description = "Bootstrap Styles for YAFOWIL"
readme = "README.rst"
license = {text = "Simplified BSD"}
authors = [{name = "Yafowil Contributors", email = "dev@conestack.org"}]
classifiers = [
    "Environment :: Web Environment",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "License :: OSI Approved :: BSD License",
]
dependencies = [
    "webresource",
    "yafowil>2.2.99",
]

[project.optional-dependencies]
test = [
    "coverage",
    "pytest",
]

[project.entry-points."yafowil.plugin"]
register = "yafowil.bootstrap:register"

[tool.zest-releaser]
create-wheel = true
